<resources>
    <string name="app_name">Eshop app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="total_price">Total price:</string>
    <string name="_0">0</string>
    <string name="total_weight">Total weight:</string>
    <string name="checkout">checkout</string>
    <string name="you_are_successfully_logged_in">You are successfully logged in.</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_profile">Welcome to profile</string>
    <string name="jabkla">jabkla</string>
    <string name="slovakia">slovakia</string>
    <string name="id">id</string>
    <string name="date">date</string>
    <string name="item_count">item_count</string>
    <string name="price">price</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="your_orders">Your orders</string>
    <string name="currency">currency</string>
    <string name="orders">orders</string>
    <string name="currency1">currency</string>
    <string name="current_currency">Current currency:</string>
    <string name="eur">EUR</string>
    <string name="select_currency">Select currency:</string>
    <string name="convert">convert</string>
    <string name="todo">TODO</string>
    <string name="about_product">About product:</string>
    <string name="product_info">product info</string>
    <string name="kg">kg</string>
    <string name="about_product1">About product:</string>
    <string name="product_info1">product info</string>
    <string name="kg1">kg</string>
    <string name="todo1">TODO</string>
    <string-array name="currency_codes">
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHF</item>
        <item>CLF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CZK</item>
        <item>EUR</item>
        <item>JEP</item>
    </string-array>
</resources>