<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductList"
        android:layout_width="match_parent"
        android:layout_height="610dp"

        app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_money_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_weight"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_weight_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>