<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/id_productImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/id_productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jabkla"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:layout_below= "@id/id_productImage"
                android:textSize="20dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/id_productOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_productName"
                android:layout_marginBottom="20dp"
                android:text="@string/slovakia"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_productOrigin"
                android:layout_marginBottom="20dp"
                android:text="About product: " />



            <TextView
                android:id="@+id/id_productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_productImage"
                android:layout_toEndOf="@id/id_productName"
                android:text="@string/_0"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="200dp"/>
            <TextView
                android:id="@+id/id_productCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_productImage"
                android:layout_toEndOf="@id/id_productPrice"
                android:text="@string/_0"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/product_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about"
                android:layout_marginBottom="40dp"
                android:text="product info" />

            <ImageView
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_info"
                android:layout_toEndOf="@id/id_productImage"
                android:src="@drawable/ic_baseline_add_shopping_cart"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/tv_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_info"
                android:text="@string/add_to_cart"
                android:layout_toStartOf="@id/add_to_cart"
                android:textColor="@color/green"
                android:textSize="18sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_info"
                android:layout_marginTop="-20dp"
                android:layout_toStartOf="@id/tv_add_to_cart"
                android:hint="kg">

                <EditText
                    android:id="@+id/et_product_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:background="@color/fui_transparent"
                    android:maxLength="3"
                    tools:text="110" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>